objects/Account.object
<CustomObject>
    <fields>
        <fullName>Back_Promote_Test__c</fullName>
        <description>This is a description added after back promoted to Dev2.</description>
        <label>Back Promote Test</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>red</fullName>
                </value>
                <value>
                    <fullName>blue</fullName>
                </value>
                <value>
                    <fullName>green</fullName>
                </value>
                <value>
                    <fullName>yellow</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Back_promotion_test__c</fullName>
        <label>Back promotion test</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Field__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New Field</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SAP_Account__c</fullName>
        <externalId>true</externalId>
        <label>SAP Account #</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Test_Back_Promotion__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Test Back Promotion</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>